--- a/css/styles.css
+++ b/css/styles.css
@@ -425,23 +425,23 @@ input:focus {
   width: 350px;
   max-width: 100%;
   height: 350px;
-  padding: 1.5em;
+  padding: 1em;
 }
-@media (min-width: 768px) {
+@media (min-width: 700px) {
   .col {
     margin: 0px;
     width: 400px;
     height: 400px;
-    padding: 1.5em;
+    padding: 1em;
     opacity: 80%;
   }
 }
-@media (min-width: 768px) and (min-width: 1000px) {
+@media (min-width: 700px) and (min-width: 1000px) {
   .col {
     margin: 0px;
     width: 325px;
     height: 325px;
-    padding: 1.5em;
+    padding: 1em;
     opacity: 80%;
   }
   .col:hover {
@@ -459,17 +459,9 @@ input:focus {
 
 .search-box {
   padding-top: 2.5em;
+  padding-bottom: 2em;
   width: 80%;
   margin: 0 auto;
-}
-
-@media (min-width: 768px) {
-  .gallery {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding: 2em 2em;
-  }
 }
 
 .row {
@@ -479,7 +471,7 @@ input:focus {
   justify-content: center;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 700px) {
   .col {
     display: flex;
     flex-basis: 25%;
