--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -29,6 +29,12 @@ ul{
   margin: 0;
 }
 
+.lb-caption{
+  display: block;
+  text-align: center;
+  margin-left: 30px;
+}
+
 /* ============================================= */
 /*              Typography                       */
 /* ============================================= */
