--- a/css/styles.css
+++ b/css/styles.css
@@ -376,6 +376,12 @@ ul {
   margin: 0;
 }
 
+.lb-caption {
+  display: block;
+  text-align: center;
+  margin-left: 30px;
+}
+
 /* ============================================= */
 /*              Typography                       */
 /* ============================================= */
@@ -427,7 +433,7 @@ input:focus {
   height: 350px;
   padding: 1em;
 }
-@media (min-width: 700px) {
+@media (min-width: 600px) {
   .col {
     margin: 0px;
     width: 400px;
@@ -436,7 +442,7 @@ input:focus {
     opacity: 80%;
   }
 }
-@media (min-width: 700px) and (min-width: 1000px) {
+@media (min-width: 600px) and (min-width: 1000px) {
   .col {
     margin: 0px;
     width: 325px;
@@ -471,7 +477,7 @@ input:focus {
   justify-content: center;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 600px) {
   .col {
     display: flex;
     flex-basis: 25%;
