--- a/css/styles.css
+++ b/css/styles.css
@@ -379,7 +379,14 @@ ul {
 .lb-caption {
   display: block;
   text-align: center;
-  margin-left: 30px;
+}
+
+@media (min-width: 600px) {
+  .lb-caption {
+    display: block;
+    text-align: center;
+    margin-left: 30px;
+  }
 }
 
 /* ============================================= */
@@ -426,7 +433,7 @@ input:focus {
 /* ============================================= */
 /*              Images                           */
 /* ============================================= */
-.col {
+.image {
   margin: 0px;
   width: 350px;
   max-width: 100%;
@@ -434,7 +441,7 @@ input:focus {
   padding: 1em;
 }
 @media (min-width: 600px) {
-  .col {
+  .image {
     margin: 0px;
     width: 400px;
     height: 400px;
@@ -443,14 +450,14 @@ input:focus {
   }
 }
 @media (min-width: 600px) and (min-width: 1000px) {
-  .col {
+  .image {
     margin: 0px;
     width: 325px;
     height: 325px;
     padding: 1em;
     opacity: 80%;
   }
-  .col:hover {
+  .image:hover {
     opacity: 100%;
     transform: scale(1.1);
   }
